--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
           <!-- Nav links -->
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="submission/views/home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
+              <a class="nav-link" href="submission/views/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="hobbies.html">Hobbies</a>
+              <a class="nav-link" href="submission/views/hobbies.html">Hobbies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="resume.html">Resume</a>
+              <a class="nav-link" href="submission/views/resume.html">Resume</a>
             </li>
           </ul>
           <!-- Right-side icon -->
           <a class="navbar-brand ms-auto" href="#">
             <img
-              src="../resources/img/favicon.ico"
+              src="submission/resources/img/favicon.ico"
               alt="Icon"
               width="30"
               height="24"
@@ -66,7 +66,7 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="../resources/img/img1.JPG" class="img-fluid rounded-start" alt="...">
+                <img src="submission/resources/img/img1.JPG" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
