--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         I am currently majoring in Computer Science and Physics with a minor in Quantum Engineering. 
                         I am looking forward to getting started on my career in research.
                     </p>
-                    <p class="card-text"><small class="text-body-secondary" ><a class="nav-link" href="resume.html">Resume</a></small></p>
+                    <p class="card-text"><small class="text-body-secondary" ><a class="nav-link" href="submission/views/resume.html">Resume</a></small></p>
                 </div>
             </div>
         </div>
