--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <li class="nav-item">
               <a class="nav-link" href="submission/views/resume.html">Resume</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="submission/Calendar/index.html">Calendar</a>
+            </li>
           </ul>
           <!-- Right-side icon -->
           <a class="navbar-brand ms-auto" href="#">
